Update 'r96ohwgfa-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:1d5f82d9bee49566163b5585ab614e6d8ffc8148@sha256:28c47a88c4cfe7c5b6f66f525338af5aad8f3804e8565d9869b4c43234b4806d

--- a/components/r96ohwgfa-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/r96ohwgfa-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: r96ohwgfa-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:1d5f82d9bee49566163b5585ab614e6d8ffc8148@sha256:28c47a88c4cfe7c5b6f66f525338af5aad8f3804e8565d9869b4c43234b4806d
+          name: container-image
